name:                graphql-hs
version:             0.1.0.0
synopsis:            GraphQL Implementation in Haskell
description:         Please see README.md
homepage:            https://github.com/5outh/graphql-hs
license:             MIT
license-file:        LICENSE
author:              Benjamin Kovach
maintainer:          bkovach13@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , GraphQL.Language.Parser
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       containers
  default-language:    Haskell2010

test-suite graphql-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
